# system-stats-dashboard

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: audit.yml  ci.yml  cross_compile.yml
src/: auto_refreshing_stats.rs  dashboard_context.rs  error_context.rs  main.rs  stats.rs  stats_history.rs
src/benches/: bench_stats.rs
templates/: base.html.tera  dashboard.html.tera  error.html.tera
