[package]
name = "system-stats-api"
version = "0.1.0"
authors = ["Steven Goldberg"]
edition = "2018"

[dependencies]
systemstat = "0.1.7"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", default-features = false, features = ["tera_templates", "json"] }
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }