[package]
name = "system-stats-dashboard"
version = "0.2.0"
authors = ["Steven Goldberg"]
edition = "2018"

[dependencies]
systemstat = "0.1.7"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }